--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/eslint": "8.56.0",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
+        "@rollup/plugin-json": "^6.1.0",
         "autoprefixer": "^10.4.17",
         "eslint": "^8.56.0",
         "eslint-plugin-svelte": "^2.35.1",
@@ -31,6 +32,7 @@
     },
     "type": "module",
     "dependencies": {
+        "svelte-i18n": "^4.0.0",
         "tippy.js": "^6.3.7"
     }
 }
