--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "dev": "vite dev",
         "build": "vite build",
         "preview": "vite preview",
+        "format": "npx prettier . --write",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "eslint ."
     },
     "devDependencies": {
+        "@rollup/plugin-json": "^6.1.0",
         "@sveltejs/adapter-node": "^3.0.0",
         "@sveltejs/adapter-static": "^3.0.0",
         "@sveltejs/kit": "^2.0.0",
@@ -18,11 +20,11 @@
         "@types/eslint": "8.56.0",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
-        "@rollup/plugin-json": "^6.1.0",
         "autoprefixer": "^10.4.17",
         "eslint": "^8.56.0",
         "eslint-plugin-svelte": "^2.35.1",
         "postcss": "^8.4.33",
+        "prettier": "3.2.5",
         "svelte": "^4.2.7",
         "svelte-check": "^3.6.0",
         "tailwindcss": "^3.4.1",
