--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
           path: build
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: download build
         uses: actions/download-artifact@v4
