--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,8 @@ jobs:
           name: build_output
           path: build
       - name: deploy to vps
+        env:
+          SSH_RSA_KEY: ${{ secrets.VPS_SSH_KEY }}
         run: |
-          echo "${{ secrets.VPS_SSH_KEY }}" > actions_rsa;
-          rsync -azv --chown=root:homepage_dev --chmod=D775,F664 --del -O -e "ssh -i ./actions_rsa" ./build github_actions@${{ secrets.VPS_IP }}:/var/www/homepage
+          echo "$SSH_RSA_KEY" > actions_rsa;
+          rsync -azv --chown=root:homepage_dev --chmod=D775,F664 --del -O -e "ssh -i actions_rsa" ./build github_actions@${{ secrets.VPS_IP }}:/var/www/homepage
