--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,4 +41,4 @@ jobs:
           SSH_RSA_KEY: ${{ secrets.VPS_SSH_KEY }}
         run: |
           echo "$SSH_RSA_KEY" > actions_rsa;
-          rsync -azv --chown=root:homepage_dev --chmod=D775,F664 --del -O -e "ssh -i actions_rsa" ./build github_actions@${{ secrets.VPS_IP }}:/var/www/homepage
+          rsync -azv --chown=root:homepage_dev --chmod=D775,F664 --del -O -e "ssh -o StrictHostKeyChecking=no -i actions_rsa" ./build github_actions@${{ secrets.VPS_IP }}:/var/www/homepage
