--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,4 @@ jobs:
         run: |
           echo "$SSH_RSA_KEY" > actions_rsa;
           chmod 600 actions_rsa;
-          rsync -azv --chown=root:homepage_dev --chmod=D775,F664 --del -O -e "ssh -o StrictHostKeyChecking=no -i actions_rsa" ./build github_actions@${{ secrets.VPS_IP }}:/var/www/homepage
+          rsync -azv --chown=root:homepage_dev --chmod=D775,F664 --del -O -e "ssh -o StrictHostKeyChecking=no -i actions_rsa" ./build/* github_actions@${{ secrets.VPS_IP }}:/var/www/homepage
