--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,15 @@
-[*.{js, ts, svelte, css, json}]
+[*.{js, ts, svelte, css}]
 charset = utf-8
 end_of_line = lf
 indent_style = space
 indent_size = 4
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.json]
+charset = utf-8
+end_of_line = lf
+indent_style = space
+indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
