--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,17 @@
 {
+    "plugins": ["prettier-plugin-svelte"],
     "tabWidth": 4,
     "useTabs": false,
     "endOfLine": "lf",
     "singleQuote": false,
-    "semi": true
+    "semi": true,
+    "overrides": [
+        {
+            "files": "*.json",
+            "options": {
+                "tabWidth": 2
+            }
+        },
+        { "files": "*.svelte", "options": { "parser": "svelte" } }
+    ]
 }
