--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "eslint-plugin-svelte": "^2.35.1",
         "postcss": "^8.4.33",
         "prettier": "3.2.5",
+        "prettier-plugin-svelte": "^3.2.3",
         "svelte": "^4.2.7",
         "svelte-check": "^3.6.0",
         "tailwindcss": "^3.4.1",
