--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
     "semi": true,
     "overrides": [
         {
-            "files": "*.json",
+            "files": ["*.json", "*.yaml", "*.yml"],
             "options": {
                 "tabWidth": 2
             }
