--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,5 @@
 {
+    "$schema": "https://json.schemastore.org/prettierrc",
     "plugins": ["prettier-plugin-svelte"],
     "tabWidth": 4,
     "useTabs": false,
