--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
   },
   "devDependencies": {
     "@rollup/plugin-json": "^6.1.0",
-    "@sveltejs/adapter-node": "^3.0.0",
-    "@sveltejs/adapter-static": "^3.0.0",
-    "@sveltejs/kit": "^2.5.27",
+    "@sveltejs/adapter-node": "^3.0.3",
+    "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/kit": "^2.7.4",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
-    "@types/eslint": "8.56.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-plugin-svelte": "^2.45.1",
-    "postcss": "^8.4.33",
+    "@types/eslint": "^9.6.1",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.14.0",
+    "eslint-plugin-svelte": "^2.46.0",
+    "postcss": "^8.4.47",
     "prettier": "3.2.5",
-    "prettier-plugin-svelte": "^3.2.6",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "tailwindcss": "^3.4.1",
-    "tslib": "^2.4.1",
-    "typescript": "^5.5.0",
-    "vite": "^5.4.4"
+    "prettier-plugin-svelte": "^3.2.7",
+    "svelte": "^5.1.9",
+    "svelte-check": "^4.0.5",
+    "tailwindcss": "^3.4.14",
+    "tslib": "^2.8.1",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10"
   },
   "type": "module",
   "dependencies": {
-    "svelte-i18n": "^4.0.0",
+    "svelte-i18n": "^4.0.1",
     "tippy.js": "^6.3.7"
   }
 }
