--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.7.4",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@types/node": "^22.9.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "prettier": "3.2.5",
