--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "type": "module",
   "dependencies": {
-    "svelte-i18n": "^4.0.1",
+    "@inlang/paraglide-js": "^2.1.0",
     "tippy.js": "^6.3.7"
   }
 }
